pipelinean integratu ; formatu aldaketa

--- a/doima.bib
+++ b/doima.bib
@@ -1,513 +1,875 @@
-@Book{zuazo2018,
-  Address = {Bilbo},
-  Author = {K Zuazo},
-  Publisher = {Euskal Herriko Unibertsitatea},
-  Title = {Sarako euskara},
-  Year = {2018}
+@book{agirrebena2007a,
+  Title = {Beasaingo euskara},
+  Author = {Aintzane Agirrebeña and Itziar Alberdi and Xabier Mendiguren and Asier Sarasua},
+  Year = {2007},
+  Publisher = {Beasaingo Udala},
+  Address = {Beasain}
 }
 
 
-@Phdthesis{montoya2003,
-  Author = {{Montoya Gaitero}, Estibalitz},
-  School = {University of the Basque Country (EHU)},
-  Title = {{Zugarramurdiko eta Urdazubiko euskara}},
-  Year = {2003}
+@book{agirrebena2007b,
+  Title = {Zarautz hizketan},
+  Author = {Aintzane Agirrebeña and Belen Maiz and Fernando Muniozguren and Asier Sarasua and Miren Zabaleta},
+  Year = {2007},
+  Publisher = {Zarauzko Udala},
+  Address = {Zarautz}
 }
 
 
-@Article{izagirre1970,
-  Author = {Izagirre, Cándido},
-  Publisher = {Anuario del Seminario de Filolog{\'\i}a Vasca" Julio de Urquijo"},
-  Title = {El vocabulario vasco de Aranzazu-Oñate y zonas colindantes},
-  Year = {1970}
+@book{agirrebena2014,
+  Title = {Elorrixoko berbetia},
+  Author = {Aintzane Agirrebeña and Elexpuru, Juan Martin},
+  Year = {2014},
+  Publisher = {Elorrioko Udala},
+  Address = {Elorrio}
 }
 
 
-@Book{gaminde2004b,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Berangoko Udala, Bizkaiko Foru Aldundia, Eusko Jaurlaritza},
-  Title = {Berango berbarik berba},
-  Year = {2004}
+@book{agirrebena2017,
+  Title = {Getaiko euskera},
+  Author = {Aintzane Agirrebeña and Asier Sarasua and Miren Zabaleta},
+  Year = {2017},
+  Publisher = {Getariako Udala},
+  Address = {Getaria}
 }
 
 
-@Inproceedings{beristain2018,
-  Author = {Beristain, A},
-  Title = {Azpeitiko hiztegi dialektala},
-  Year = {2018}
+@book{agirretxe1998,
+  Title = {Pasaiako hizkera},
+  Author = {Agirretxe Mitxelena, Joxe Luix and Lersundi Ayestaran, Mikel and Olaetxea Rodriguez, Ortzuri},
+  Year = {1998},
+  Publisher = {Pasaiako Udala},
+  Address = {Pasaia}
 }
 
 
-@Book{salaburu2005,
-  Address = {Bilbo},
-  Author = {Salaburu, Pello and Lakar, Maite},
-  Publisher = {Euskaltzaindia},
-  Title = {Baztango Mintzoa: gramatika eta hiztegia},
-  Year = {2005}
+@book{agirretxe2000,
+  Title = {Lezoko euskararen azterketa},
+  Author = {Agirretxe Mitxelena, Joxe Luix and Esnaola Arbiza, Imanol},
+  Year = {2000},
+  Publisher = {Lezoko Unibertsitateko Udala},
+  Address = {Lezo}
 }
 
 
-@Book{salaburu1984,
-  Address = {Bilbo},
-  Author = {Salaburu, Pello},
-  Publisher = {Deustuko Unibertsitatea},
-  Title = {Hizkuntz teoria eta Baztango euskalkia: Fonetika eta fonologia. II: Arau fonologikoak},
-  Year = {1984}
+@book{altuna2014,
+  Title = {Oñatiko euskeria},
+  Author = {Roberto Altuna and Kepa Elortza and Koldo Zumalde},
+  Year = {2014},
+  Publisher = {Oñatiko Udala},
+  Address = {Oñati}
 }
 
 
-@Book{hualde1994lekeitio,
-  Address = {Bilbo},
-  Author = {Hualde, J I and Arantzazu Elordieta and Gorka Elordieta},
-  Publisher = {University of the Basque Country Press},
-  Title = {{The Basque dialect of Lekeitio}},
-  Year = {1994}
-}
-
-
-@Book{duhau1993,
-  Address = {Donibane-Lohitzune},
-  Author = {Duhau, Henri},
-  Publisher = {Alinea},
-  Title = {Beskoitzeko euskara},
-  Year = {1993}
-}
-
-
-@Book{hurtado2001,
-  Address = {Lazkao},
-  Author = {Hurtado Mendieta, Irene},
-  Publisher = {Goierriko Euskal Eskola Kultur Elkartea},
-  Title = {Goierriko eta Tolosalde hegoaldeko hizkerak},
-  Year = {2001}
-}
-
-
-@Book{camino1997,
-  Address = {Iruñea},
-  Author = {Camino Lertxundi, Iñaki},
+@book{apalauza2008,
+  Title = {Imozko euskara},
+  Author = {Apalauza, Amaia},
+  Year = {2008},
   Publisher = {Nafarroako Gobernua},
-  Title = {Aezkoako euskararen azterketa dialektologikoa},
-  Year = {1997}
+  Address = {Iruña}
 }
 
 
-@Book{ibarra2000,
-  Address = {Iruñea},
-  Author = {Ibarra Murillo, Orreaga},
-  Publisher = {Nafarroako Unibertsitate Publikoa},
-  Title = {{Erroibarko eta Esteribarko hizkera}},
-  Year = {2000}
+@book{aramaio2011,
+  Title = {Berriatuko euskararen zenbait alderdi},
+  Author = {Aramaio Elordi, Itziar},
+  Year = {2011},
+  Publisher = {Berriatuko Udala},
+  Address = {Berriatua}
 }
 
 
-@Book{burgete1991,
-  Address = {Otxandio},
-  Author = {Burgete, X eta Gaminde, I},
-  Publisher = {Otxandioko Udala},
-  Title = {Otxandioko euskaraz},
-  Year = {1991}
-}
-
-
-@Book{labaka1996,
-  Address = {Lasarte-Oria},
-  Author = {Labaka Usabiaga, Ane and Azurza Iraola, M Eugenia and Bereziartua Iraola, Juan Inazio},
-  Publisher = {Lasarte-Oriako Udala},
-  Title = {Lasarte-Oriako euskararen azterketa},
-  Year = {1996}
-}
-
-
-@Book{aranberri1996,
-  Address = {Oñati},
-  Author = {Aranberri Odriozola, Fernando},
-  Publisher = {Gertu},
+@book{aranberri1996,
   Title = {Ermua eta Eitzako euskara},
+  Author = {Aranberri Odriozola, Fernando},
   Year = {1996},
+  Publisher = {Gertu},
+  Address = {Oñati},
   Url = {http://www.liburuklik.euskadi.eus/handle/10771/33007}
 }
 
 
-@Book{urkijo1994,
-  Address = {Bilbo},
-  Author = {Urkijo, Natxo},
-  Publisher = {Udako Euskal Unibertsitatea},
-  Title = {Zenbait apunte Laudioko euskaraz},
-  Year = {1994},
-  Url = {http://www.liburuklik.euskadi.eus/handle/10771/29193}
+@book{arin1989,
+  Title = {Ataungo aho hizkuntzaren barne muinak},
+  Author = {Arin, Jone and Apalategi Begiristain, Joxe Martin and Arruabarrena, Josune},
+  Year = {1989},
+  Publisher = {Kriselu},
+  Address = {Donostia}
 }
 
 
-@Book{fraile1996,
-  Address = {Oiartzun},
-  Author = {Fraile Ugalde, Idoia and Fraile Ugalde, Ainhoa},
-  Publisher = {Oiartzungo Udala},
-  Title = {Oiartzungo hizkera},
+@phdthesis{arretxe1994,
+  Title = {Basauriko euskararen azterketa linguistikoa},
+  Author = {Arretxe Perez, Jon},
+  Year = {1994},
+  School = {Deustuko Unibertsitatea}
+}
+
+
+@book{azketa2003,
+  Title = {Fikeko berbakera},
+  Author = {Azketa Rike, Sorkunde},
+  Year = {2003},
+  Publisher = {Gamiz-Fikako Udala},
+  Address = {Gamiz-Fika}
+}
+
+
+@book{azurmendi1996,
+  Title = {Ataungo euskara},
+  Author = {Azurmendi Albizu, Joxe Migel},
   Year = {1996},
+  Publisher = {Goiherriko Euskal Eskola Kultur Elkartea},
+  Address = {Lazkao}
+}
+
+
+@book{azurmendi1998,
+  Title = {Zegamako euskara},
+  Author = {Azurmendi Albizu, Joxe Migel},
+  Year = {1998},
+  Publisher = {Goiherriko Euskal Eskola Kultur Elkartea},
+  Address = {Lazkao}
+}
+
+
+@book{barrutia1996,
+  Title = {Bermeo eta Mundakako arrantzaleen hiztegia},
+  Author = {Barrutia Etxebarria, Eneko},
+  Year = {1996},
+  Publisher = {Udako Euskal Unibertsitatea},
+  Address = {Bilbo}
+}
+
+
+@article{beristain2018,
+  Title = {Azpeitiko euskararen hiztegi dialektal bat -- I},
+  Author = {Beristain, Ander},
+  Year = {2018},
+  Journal = {Fontes Linguae Vasconum},
+  Pages = {7--54},
+  Number = {125}
+}
+
+
+@book{burgete1991,
+  Title = {Otxandioko euskaraz},
+  Author = {Burgete, X and Gaminde, I},
+  Year = {1991},
+  Publisher = {Otxandioko Udala},
+  Address = {Otxandio}
+}
+
+
+@book{camino1997,
+  Title = {Aezkoako euskararen azterketa dialektologikoa},
+  Author = {Camino Lertxundi, Iñaki},
+  Year = {1997},
+  Publisher = {Nafarroako Gobernua},
+  Address = {Iruñea}
+}
+
+
+@book{camino2016,
+  Title = {Amiküze eskualdeko heskuara},
+  Author = {Camino Lertxundi, Iñaki},
+  Year = {2016},
+  Publisher = {Euskaltzaindia},
+  Address = {Bilbo}
+}
+
+
+@book{carrera2005,
+  Title = {Legutiano aldeko euskara},
+  Author = {Carrera Garmendia, Ignacio M. and García Uriarte, Imanol},
+  Year = {2005},
+  Publisher = {Arabako Foru Aldundia},
+  Address = {Gasteiz}
+}
+
+
+@book{coyos1999,
+  Title = {Le parler basque souletin des Arbailles : une approche de l'ergativit\'e},
+  Author = {Coyos, Jean-Baptiste},
+  Year = {1999},
+  Publisher = {L'Harmattan},
+  Address = {Paris}
+}
+
+
+@book{delcastillo2001,
+  Title = {Azkoittiko euskerie},
+  Author = {del Castillo, Vanesa and Romo, Jose Angel and Giralt, Bakarne},
+  Year = {2001},
+  Publisher = {FK},
+  Address = {Azkoitia}
+}
+
+
+@book{duhau1993,
+  Title = {Beskoitzeko euskara},
+  Author = {Duhau, Henri},
+  Year = {1993},
+  Publisher = {Alinea},
+  Address = {Donibane-Lohitzune}
+}
+
+
+@book{elexpuru2004,
+  Title = {Bergara aldeko hiztegia},
+  Author = {Elexpuru Arregi, Juan Martin},
+  Year = {2004},
+  Publisher = {Bergarako Udala},
+  Address = {Bergara}
+}
+
+
+@book{elortza1999,
+  Title = {Arrasateko euskara},
+  Author = {Elortza, Jerardo and Garro, Eneritz and Ormaetxea, Jose Luis and Garai, Jesus M and Plazaola, Estepan},
+  Year = {1999},
+  Publisher = {Arrasateko Udala},
+  Address = {Arrasate}
+}
+
+
+@book{ensunza2011,
+  Title = {Zizurkil ahoz aho},
+  Author = {Ensunza Aldamizetxebarria, Ariane and Reguero Ugarte, Urtzi},
+  Year = {2011},
+  Publisher = {Zizurkilgo Udala},
+  Address = {Zizurkil}
+}
+
+
+@phdthesis{epelde2004a,
+  Title = {Larresoroko euskara},
+  Author = {Epelde Zendoia, Irantzu},
+  Year = {2004},
+  School = {University of the Basque Country (EHU)}
+}
+
+
+@phdthesis{erdozia2001,
+  Title = {Sakana erdialdeko euskara},
+  Author = {Erdozia Mauleon, Jose Luis},
+  Year = {2001},
+  School = {University of the Basque Country (EHU)}
+}
+
+
+@book{errazti1994,
+  Title = {Iurreta elizateko euskara eta toponimia},
+  Author = {Errazti Igartua, Alberto},
+  Year = {1994},
+  Publisher = {Iurretako Udala},
+  Address = {Iurreta}
+}
+
+
+@book{etxabe2003,
+  Title = {Zaldibiako euskara},
+  Author = {Karmele Etxabe and Larraitz Garmendia},
+  Year = {2003},
+  Publisher = {Zaldibiako Udala},
+  Address = {Zaldibia}
+}
+
+
+@phdthesis{etxebarria1988,
+  Title = {Zeberio-Haraneko euskararen azterketa etno-linguistikoa},
+  Author = {Etxebarria Ayesta, Juan Manuel},
+  Year = {1988},
+  School = {Deustuko Unibertsitatea}
+}
+
+
+@book{fraile1996,
+  Title = {Oiartzungo hizkera},
+  Author = {Fraile Ugalde, Idoia and Fraile Ugalde, Ainhoa},
+  Year = {1996},
+  Publisher = {Oiartzungo Udala},
+  Address = {Oiartzun},
   Url = {http://www.liburuklik.euskadi.eus/handle/10771/12351}
 }
 
 
-@Book{olano1998,
-  Address = {Iruña},
-  Author = {Olano, Mikel},
-  Publisher = {Nafarroako Gobernua},
-  Title = {Areso eta Leitzako hizkerak},
-  Year = {1998}
+@book{furundarena1998,
+  Title = {Astigarragako hizkera},
+  Author = {Furundarena Salsamendi, Joxe Jabier},
+  Year = {1998},
+  Publisher = {Santio},
+  Address = {Astigarraga}
 }
 
 
-@Book{zuazo2021,
-  Address = {Bilbo},
-  Author = {K Zuazo},
-  Publisher = {Euskal Herriko Unibertsitatea},
-  Title = {{Baigorri eta Ortzaize ibarretako euskara}},
-  Year = {2021}
-}
-
-
-@Book{rotaetxe1978,
-  Address = {Durango},
-  Author = {Rotaetxe, Karmele},
-  Publisher = {Leopoldo Zugaza},
-  Title = {Estudio estructural del euskara de Ondárroa},
-  Year = {1978}
-}
-
-
-@Book{ndiaye1970,
-  Address = {The Hague},
-  Author = {N'Diaye, Genevi{\`e}ve},
-  Publisher = {Mouton},
-  Title = {Structure du dialecte basque de Maya},
-  Year = {1970}
-}
-
-
-@Book{rollo1925,
-  Address = {Amsterdam},
-  Author = {Rollo, William},
-  Publisher = {H.J. Paris},
-  Title = {The Basque dialect of Marquina},
-  Year = {1925}
-}
-
-
-@Book{hualde1992,
-  Address = {Donostia},
-  Author = {Hualde, {Jos{\'e} Ignacio} and Xabier Bilbao},
-  Publisher = {Diputacion Foral de Gipuzkoa},
-  Title = {{A phonological study of the Basque dialect of Getxo}},
-  Year = {1992},
-  Isbn = {9788479070854}
-}
-
-
-@Book{larrasquet1939,
-  Address = {Paris},
-  Author = {Larrasquet, Jean},
-  Publisher = {Librairie C. Klincksiek},
-  Title = {Le basque de la Basse-Soule Orientale},
-  Year = {1939}
-}
-
-
-@Book{larrasquet1934,
-  Address = {Paris},
-  Author = {Larrasquet, Jean},
-  Publisher = {Chez l'auteur},
-  Title = {Le basque souletin nord-oriental},
-  Year = {1934}
-}
-
-
-@Phdthesis{erdozia2001,
-  Author = {{Erdozia Mauleon}, Jose Luis},
-  School = {University of the Basque Country (EHU)},
-  Title = {Sakana erdialdeko euskara},
-  Year = {2001}
-}
-
-
-@Phdthesis{epelde2004a,
-  Author = {Epelde Zendoia, Irantzu},
-  School = {University of the Basque Country (EHU)},
-  Title = {Larresoroko euskara},
-  Year = {2004}
-}
-
-
-@Phdthesis{uriarte1995,
-  Author = {Uriarte Garai, Jon Andoni},
-  School = {Deustuko Unibertsitatea},
-  Title = {Fruizko hizkera: azterketa linguistikoa},
-  Year = {1995}
-}
-
-
-@Phdthesis{ibarra1994,
-  Author = {Ibarra Murillo, Orreaga},
-  School = {Euskal Herriko Unibertsitatea},
-  Title = {Ultzamako euskararen azterketa},
-  Year = {1994}
-}
-
-
-@Phdthesis{arretxe1994,
-  Author = {Arretxe Perez, Jon},
-  School = {Deustuko Unibertsitatea},
-  Title = {Basauriko euskararen azterketa linguistikoa},
-  Year = {1994}
-}
-
-
-@Phdthesis{etxebarria1988,
-  Author = {Etxebarria Ayesta, Juan Manuel},
-  School = {Deustuko Unibertsitatea},
-  Title = {Zeberio-Haraneko euskararen azterketa etno-linguistikoa},
-  Year = {1988}
-}
-
-
-@Book{carrera2005,
-  Address = {Gasteiz},
-  Author = {Carrera Garmendia, Ignacio M. and García Uriarte, Imanol},
-  Publisher = {Arabako Foru Aldundia},
-  Title = {Legutiano aldeko euskara},
-  Year = {2005}
-}
-
-
-@Phdthesis{ormaetxea2005,
-  Author = {Ormaetxea Lasaga, Jose Luis},
-  School = {University of the Basque Country (EHU)},
-  Title = {Aramaioko euskara (azterketa dialektologikoa)},
-  Year = {2005}
-}
-
-
-@Book{ormaetxea2002,
-  Address = {Gasteiz},
-  Author = {Ormaetxea Lasaga, Jose Luis},
-  Publisher = {Aramaioko Udala},
-  Title = {Aramaioko euskara},
-  Year = {2002}
-}
-
-
-@Book{gaminde1992b,
-  Address = {Bilbo},
+@book{gaminde1989,
+  Title = {Leioako euskararen gramatikaz},
   Author = {Gaminde, I},
-  Publisher = {Urdulizko Euskera Taldea},
-  Title = {Urduliz ingeru, berbak eta bizimodu},
-  Year = {1992}
+  Year = {1989},
+  Publisher = {Leioako Udala},
+  Address = {Leioa}
 }
 
 
-@Book{gaminde1999b,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Bakioko Udala, Labayru Ikastegia, Bilbao Bizkaia Kutxa},
-  Title = {Bakio berbarik berba},
-  Year = {1999}
-}
-
-
-@Book{gaminde2000,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Zamudioko Udala, Labayru Ikastegia, Bilbao Bizkaia Kutxa},
-  Title = {Zamudio berbarik berba},
-  Year = {2000}
-}
-
-
-@Book{gaminde2001a,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Arrietako Udala, Bizkaiko Foru Aldundia, Eusko Jaurlaritza, Bilbao Bizkaia Kutxa},
-  Title = {Arrieta berbarik berba},
-  Year = {2001}
-}
-
-
-@Book{gaminde2001b,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Meñakako Udala, Bizkaiko Foru Aldundia},
-  Title = {Meñaka berbarik berba},
-  Year = {2001}
-}
-
-
-@Book{gaminde1997,
-  Address = {Bilbo},
-  Author = {Gaminde, I},
-  Publisher = {Gatikako Gogoz Euskara Taldea},
-  Title = {Gatikako euskaraz},
-  Year = {1997}
-}
-
-
-@Book{altuna2014,
-  Address = {Oñati},
-  Author = {Roberto Altuna, Kepa Elortza, Koldo Zumalde},
-  Publisher = {Oñatiko Udala},
-  Title = {Oñatiko euskeria},
-  Year = {2014}
-}
-
-
-@Book{sagarzazu2005,
-  Address = {Irun},
-  Author = {Sagarzazu, Txomin},
-  Publisher = {Alberdania},
-  Title = {{Hondarribiko eta Irungo euskara}},
-  Year = {2005}
-}
-
-
-@Book{uned1988,
-  Address = {Donostia},
-  Author = {UNED-Bergara},
-  Publisher = {Euskal Kultur Departamentua},
-  Title = {{Bergarako euskera}},
-  Year = {1988}
-}
-
-
-@Book{camino2016,
-  Address = {Bilbo},
-  Author = {Camino Lertxundi, Iñaki},
-  Publisher = {Euskaltzaindia},
-  Title = {{Amiküze eskualdeko heskuara}},
-  Year = {2016}
-}
-
-
-@Book{agirrebena2017,
-  Address = {Getaria},
-  Author = {Aintzane Agirrebeña and Asier Sarasua and Miren Zabaleta},
-  Publisher = {Getariako Udala},
-  Title = {{Getaiko euskera}},
-  Year = {2017}
-}
-
-
-@Book{laspiur1999a,
-  Address = {Eibar},
-  Author = {Laspiur Zabala, Imanol},
-  Publisher = {Eibarko Udala},
-  Title = {{Eibarko euskeriaren deklinabidia eta entonaziñua}},
-  Year = {1999}
-}
-
-
-@Book{laspiur1999b,
-  Address = {Eibar},
-  Author = {Laspiur Zabala, Imanol},
-  Publisher = {eta kitto! Euskara Elkartea},
-  Title = {{Eibarrera jatorraren bidetik}},
-  Year = {1999}
-}
-
-
-@Book{gaminde2012,
-  Address = {Bermeo},
-  Author = {Iñaki Gaminde and Asier Romero and Hiart Legarra},
-  Publisher = {Bermeoko Udala},
-  Title = {{Gramatika eta hizkuntz bariazioa Bermeon}},
-  Year = {2012}
-}
-
-
-@Book{gaminde1991,
-  Address = {Abadiño},
+@book{gaminde1991,
+  Title = {Abadiñoko euskaraz},
   Author = {Iñaki Gaminde},
+  Year = {1991},
   Publisher = {Abadiñoko Udala},
-  Title = {{Abadiñoko euskaraz}},
-  Year = {1991}
+  Address = {Abadiño}
 }
 
 
-@Book{gaminde2005,
-  Address = {Derio},
-  Author = {Iñaki Gaminde and Esther Elgoibar and Atotz Goikoetxea and Ziortza Sanz and Oihana Astobieta and Jon Gaminde},
-  Publisher = {Tximintx Euskara Alkartea},
-  Title = {{Derioztarren euskara}},
-  Year = {2005}
-}
-
-
-@Book{gaminde2002,
-  Address = {Jatabe},
-  Author = {Iñaki Gaminde},
-  Publisher = {Maruri-Jatabeko Udala},
-  Title = {{Jatabe berbarik berba}},
-  Year = {2002}
-}
-
-
-@Book{gaminde2006,
-  Address = {Lezama},
-  Author = {Iñaki Gaminde},
-  Publisher = {Zorrizketan Lezamako Euskara Alkartea},
-  Title = {{Lezama berbarik berba}},
-  Year = {2006}
-}
-
-
-@Book{gaminde2001c,
-  Address = {Mungia},
+@phdthesis{gaminde1992a,
+  Title = {Urduliz eta Gatikako herri hizkeren azterketa linguistikoa},
   Author = {Gaminde, I},
-  Publisher = {Mungiako Udala},
+  Year = {1992},
+  School = {Deustuko Unibertsitatea}
+}
+
+
+@book{gaminde1992b,
+  Title = {Urduliz ingeru, berbak eta bizimodu},
+  Author = {Gaminde, I},
+  Year = {1992},
+  Publisher = {Urdulizko Euskera Taldea},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde1997,
+  Title = {Gatikako euskaraz},
+  Author = {Gaminde, I},
+  Year = {1997},
+  Publisher = {Gatikako Gogoz Euskara Taldea},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde1999b,
+  Title = {Bakio berbarik berba},
+  Author = {Gaminde, I},
+  Year = {1999},
+  Publisher = {Bakioko Udala, Labayru Ikastegia, Bilbao Bizkaia Kutxa},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde2000,
+  Title = {Zamudio berbarik berba},
+  Author = {Gaminde, I},
+  Year = {2000},
+  Publisher = {Zamudioko Udala, Labayru Ikastegia, Bilbao Bizkaia Kutxa},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde2001a,
+  Title = {Arrieta berbarik berba},
+  Author = {Gaminde, I},
+  Year = {2001},
+  Publisher = {Arrietako Udala, Bizkaiko Foru Aldundia, Eusko Jaurlaritza, Bilbao Bizkaia Kutxa},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde2001b,
+  Title = {Meñaka berbarik berba},
+  Author = {Gaminde, I},
+  Year = {2001},
+  Publisher = {Meñakako Udala, Bizkaiko Foru Aldundia},
+  Address = {Bilbo}
+}
+
+
+@book{gaminde2001c,
   Title = {Mungia berbarik berba},
-  Year = {2001}
+  Author = {Gaminde, I},
+  Year = {2001},
+  Publisher = {Mungiako Udala},
+  Address = {Mungia}
 }
 
 
-@Book{aramaio2011,
-  Address = {Berriatua},
-  Author = {Aramaio Elordi, Itziar},
-  Publisher = {Berriatuko Udala},
-  Title = {Berriatuko euskararen zenbait alderdi},
-  Year = {2011}
+@book{gaminde2002,
+  Title = {Jatabe berbarik berba},
+  Author = {Iñaki Gaminde},
+  Year = {2002},
+  Publisher = {Maruri-Jatabeko Udala},
+  Address = {Jatabe}
 }
 
 
-@Book{apalauza2008,
-  Address = {Iruña},
-  Author = {Apalauza, Amaia},
-  Publisher = {Nafarroako Gobernua},
-  Title = {Imozko euskara},
-  Year = {2008}
+@book{gaminde2004b,
+  Title = {Berango berbarik berba},
+  Author = {Gaminde, I},
+  Year = {2004},
+  Publisher = {Berangoko Udala, Bizkaiko Foru Aldundia, Eusko Jaurlaritza},
+  Address = {Bilbo}
 }
 
 
-@Book{ensunza2011,
-  Address = {Zizurkil},
-  Author = {Ensunza Aldamizetxebarria, Ariane and Reguero Ugarte, Urtzi},
-  Publisher = {Zizurkilgo Udala},
-  Title = {Zizurkil ahoz aho},
-  Year = {2011}
+@book{gaminde2005,
+  Title = {Derioztarren euskara},
+  Author = {Iñaki Gaminde and Esther Elgoibar and Atotz Goikoetxea and Ziortza Sanz and Oihana Astobieta and Jon Gaminde},
+  Year = {2005},
+  Publisher = {Tximintx Euskara Alkartea},
+  Address = {Derio}
 }
 
 
-@Book{delcastillo2001,
-  Address = {Azkoitia},
-  Author = {del Castillo, Vanesa and Romo, Jose Angel and Giralt, Bakarne},
-  Publisher = {FK},
-  Title = {Azkoittiko euskerie},
-  Year = {2001}
+@book{gaminde2006,
+  Title = {Lezama berbarik berba},
+  Author = {Iñaki Gaminde},
+  Year = {2006},
+  Publisher = {Zorrizketan Lezamako Euskara Alkartea},
+  Address = {Lezama}
 }
 
 
-@Book{kamino2007,
-  Address = {Bilbo},
-  Author = {Kamino Kaminondo, Peio and Salaberri Zaratiegi, Patxi},
-  Publisher = {Nafarroako Gobernua, Euskaltzaindia},
+@book{gaminde2012,
+  Title = {Gramatika eta hizkuntz bariazioa Bermeon},
+  Author = {Iñaki Gaminde and Asier Romero and Hiart Legarra},
+  Year = {2012},
+  Publisher = {Bermeoko Udala},
+  Address = {Bermeo}
+}
+
+
+@book{garmendia2004,
+  Title = {Ordiziako euskara},
+  Author = {Garmendia, Larraitz and Etxabe, Karmele},
+  Year = {2004},
+  Publisher = {Ordiziako Udala},
+  Address = {Ordizia}
+}
+
+
+@book{hualde1992,
+  Title = {A phonological study of the Basque dialect of Getxo},
+  Author = {Hualde, Jos\'e Ignacio and Xabier Bilbao},
+  Year = {1992},
+  Publisher = {Diputacion Foral de Gipuzkoa},
+  Address = {Donostia}
+}
+
+
+@book{hualde1994lekeitio,
+  Title = {The Basque dialect of Lekeitio},
+  Author = {Hualde, J I and Arantzazu Elordieta and Gorka Elordieta},
+  Year = {1994},
+  Publisher = {University of the Basque Country Press},
+  Address = {Bilbo}
+}
+
+
+@book{hurtado2001,
+  Title = {Goierriko eta Tolosalde hegoaldeko hizkerak},
+  Author = {Hurtado Mendieta, Irene},
+  Year = {2001},
+  Publisher = {Goierriko Euskal Eskola Kultur Elkartea},
+  Address = {Lazkao}
+}
+
+
+@phdthesis{ibarra1994,
+  Title = {Ultzamako euskararen azterketa},
+  Author = {Ibarra Murillo, Orreaga},
+  Year = {1994},
+  School = {Euskal Herriko Unibertsitatea}
+}
+
+
+@book{ibarra2000,
+  Title = {Erroibarko eta Esteribarko hizkera},
+  Author = {Ibarra Murillo, Orreaga},
+  Year = {2000},
+  Publisher = {Nafarroako Unibertsitate Publikoa},
+  Address = {Iruñea}
+}
+
+
+@phdthesis{iglesias2014,
+  Title = {Igorreko hizkeraren azterketa dialektologikoa},
+  Author = {Iglesias Chaves, Aitor},
+  Year = {2014},
+  School = {Euskal Herriko Unibertsitatea}
+}
+
+
+@book{iturain1995,
+  Title = {Orioko euskara},
+  Author = {Iturain, Iñaki and Loidi, Loren},
+  Year = {1995},
+  Publisher = {Orioko Udala},
+  Address = {Orio}
+}
+
+
+@article{izagirre1970,
+  Title = {El vocabulario vasco de Aranzazu-Oñate y zonas colindantes},
+  Author = {Izagirre, Cándido},
+  Year = {1970},
+  Publisher = {Anuario del Seminario de Filolog\'\ia Vasca" Julio de Urquijo},
+  Journal = {ASJU},
+  Pages = {3--248},
+  Number = {4}
+}
+
+
+@book{kamino2007,
   Title = {Luzaideko euskararen hiztegia},
-  Year = {2007}
+  Author = {Kamino Kaminondo, Peio and Salaberri Zaratiegi, Patxi},
+  Year = {2007},
+  Publisher = {Nafarroako Gobernua, Euskaltzaindia},
+  Address = {Bilbo}
+}
+
+
+@book{labaka1996,
+  Title = {Lasarte-Oriako euskararen azterketa},
+  Author = {Labaka Usabiaga, Ane and Azurza Iraola, M Eugenia and Bereziartua Iraola, Juan Inazio},
+  Year = {1996},
+  Publisher = {Lasarte-Oriako Udala},
+  Address = {Lasarte-Oria}
+}
+
+
+@book{larrasquet1934,
+  Title = {Le basque souletin nord-oriental},
+  Author = {Larrasquet, Jean},
+  Year = {1934},
+  Publisher = {Chez l'auteur},
+  Address = {Paris}
+}
+
+
+@book{larrasquet1939,
+  Title = {Le basque de la Basse-Soule Orientale},
+  Author = {Larrasquet, Jean},
+  Year = {1939},
+  Publisher = {Librairie C. Klincksiek},
+  Address = {Paris}
+}
+
+
+@book{larrañaga1998,
+  Title = {Antzuolako hizkera},
+  Author = {Larrañaga Igarza, Jone},
+  Year = {1998},
+  Publisher = {Antzuolako Udala},
+  Address = {Antzuola}
+}
+
+
+@book{larrea2010,
+  Title = {Arratia inguruko hiztegia},
+  Author = {Larrea Beobide, Angel and Rekalde Izagirre, Juan},
+  Year = {2010},
+  Publisher = {Beta III Milenio},
+  Address = {Bilbo}
+}
+
+
+@book{lasa2004,
+  Title = {Urretxu eta Zumarragako euskara},
+  Author = {Lasa Agirrezabal, Xabier},
+  Year = {2004},
+  Publisher = {Zintzo-Mintzo Euskaltzale Elkartea},
+  Address = {Urretxu}
+}
+
+
+@book{laspiur1999a,
+  Title = {Eibarko euskeriaren deklinabidia eta entonaziñua},
+  Author = {Laspiur Zabala, Imanol},
+  Year = {1999},
+  Publisher = {Eibarko Udala},
+  Address = {Eibar}
+}
+
+
+@book{laspiur1999b,
+  Title = {Eibarrera jatorraren bidetik},
+  Author = {Laspiur Zabala, Imanol},
+  Year = {1999},
+  Publisher = {eta kitto! Euskara Elkartea},
+  Address = {Eibar}
+}
+
+
+@phdthesis{legarra2011,
+  Title = {Muxikako euskararen azterketa linguistikoa},
+  Author = {Legarra, Hiart},
+  Year = {2011},
+  School = {Deustuko Unibertsitatea}
+}
+
+
+@article{lujanbio2013,
+  Title = {Goizuetako azentu-hiztegia/An accent dictionary of Goizueta Basque},
+  Author = {Lujanbio Begiristain, Oihana},
+  Year = {2013},
+  Journal = {ASJU},
+  Volume = {47},
+  Pages = {1--86},
+  Number = {2}
+}
+
+
+@book{makazaga2007,
+  Title = {Elgoibarko euskara},
+  Author = {Makazaga Eizagirre, Jesus Mari},
+  Year = {2007},
+  Publisher = {Elgoibarko Udala},
+  Address = {Elgoibar}
+}
+
+
+@book{makazaga2010,
+  Title = {Elgoibarko ahozko euskara},
+  Author = {Makazaga Eizagirre, Jesus Mari},
+  Year = {2010},
+  Publisher = {Euskaltzaindia},
+  Address = {Bilbo}
+}
+
+
+@book{markaida1993,
+  Title = {Sopelako euskaraz},
+  Author = {Markaida, Bene and Markaida, Eukene and Gaminde, Iñaki},
+  Year = {1993},
+  Publisher = {Urdulizko Euskera Taldea},
+  Address = {Urduliz}
+}
+
+
+@phdthesis{montoya2003,
+  Title = {Zugarramurdiko eta Urdazubiko euskara},
+  Author = {Montoya Gaitero, Estibalitz},
+  Year = {2003},
+  School = {University of the Basque Country (EHU)}
+}
+
+
+@book{mugarza2006,
+  Title = {Mallabiko euskara},
+  Author = {Mugarza Martinez, Pello},
+  Year = {2006},
+  Publisher = {Mallabiko Udala},
+  Address = {Mallabia}
+}
+
+
+@book{ndiaye1970,
+  Title = {Structure du dialecte basque de Maya},
+  Author = {N'Diaye, Genevi\`eve},
+  Year = {1970},
+  Publisher = {Mouton},
+  Address = {The Hague}
+}
+
+
+@book{olano1998,
+  Title = {Areso eta Leitzako hizkerak},
+  Author = {Olano, Mikel},
+  Year = {1998},
+  Publisher = {Nafarroako Gobernua},
+  Address = {Iruña}
+}
+
+
+@book{olano2005,
+  Title = {Leitzako euskararen hiztegia},
+  Author = {Olano, Mikel},
+  Year = {2005},
+  Publisher = {Nafarroako Iparraldeko Euskara Mankomunitatea},
+  Address = {Leitza}
+}
+
+
+@book{ormaetxea2002,
+  Title = {Aramaioko euskara},
+  Author = {Ormaetxea Lasaga, Jose Luis},
+  Year = {2002},
+  Publisher = {Aramaioko Udala},
+  Address = {Gasteiz}
+}
+
+
+@phdthesis{ormaetxea2005,
+  Title = {Aramaioko euskara (azterketa dialektologikoa)},
+  Author = {Ormaetxea Lasaga, Jose Luis},
+  Year = {2005},
+  School = {University of the Basque Country (EHU)}
+}
+
+
+@book{perez1991,
+  Title = {Bermeoko herri hizkera},
+  Author = {Pérez Bilbao, Antonio},
+  Year = {1991},
+  Publisher = {Igarri},
+  Address = {Bilbo}
+}
+
+
+@book{rollo1925,
+  Title = {The Basque dialect of Marquina},
+  Author = {Rollo, William},
+  Year = {1925},
+  Publisher = {H.J. Paris},
+  Address = {Amsterdam}
+}
+
+
+@book{roman2001,
+  Title = {Berrizko euskera},
+  Author = {Roman Bravo, Ismael},
+  Year = {2001},
+  Publisher = {Gerediaga Elkartea},
+  Address = {Abadiño}
+}
+
+
+@book{rotaetxe1978,
+  Title = {Estudio estructural del euskara de Ondárroa},
+  Author = {Rotaetxe, Karmele},
+  Year = {1978},
+  Publisher = {Leopoldo Zugaza},
+  Address = {Durango}
+}
+
+
+@book{sagarzazu2005,
+  Title = {Hondarribiko eta Irungo euskara},
+  Author = {Sagarzazu, Txomin},
+  Year = {2005},
+  Publisher = {Alberdania},
+  Address = {Irun}
+}
+
+
+@book{salaburu1984,
+  Title = {Hizkuntz teoria eta Baztango euskalkia: Fonetika eta fonologia. II: Arau fonologikoak},
+  Author = {Salaburu, Pello},
+  Year = {1984},
+  Publisher = {Deustuko Unibertsitatea},
+  Address = {Bilbo}
+}
+
+
+@book{salaburu2005,
+  Title = {Baztango Mintzoa: gramatika eta hiztegia},
+  Author = {Salaburu, Pello and Lakar, Maite},
+  Year = {2005},
+  Publisher = {Euskaltzaindia},
+  Address = {Bilbo}
+}
+
+
+@book{salazar2001,
+  Title = {Ugaoko euskara},
+  Author = {Salazar Larrañaga, Belene},
+  Year = {2001},
+  Publisher = {Beta III Milenio},
+  Address = {Bilbo}
+}
+
+
+@book{sarasua2005,
+  Title = {Eibarko euskara},
+  Author = {Sarasua Aranberri, Asier and Zenarruzabeitia Alonso, Leire and Agirrebeña Ubera, Aintzane},
+  Year = {2005},
+  Publisher = {Eibarko Udala},
+  Address = {Eibar}
+}
+
+
+@book{txurruka2003,
+  Title = {Debako euskara},
+  Author = {Txurruka Allika, Alazne and Urbieta Aizpurua, Josune},
+  Year = {2003},
+  Publisher = {Debako Ostolaza Kultur Elkartea},
+  Address = {Deba}
+}
+
+
+@book{ugarte1993,
+  Title = {Legazpi barrutiko itzen bilduma},
+  Author = {Ugarte Azurmendi, Martin},
+  Year = {1993}
+}
+
+
+@book{uned1988,
+  Title = {Bergarako euskera},
+  Author = {UNED-Bergara},
+  Year = {1988},
+  Publisher = {Euskal Kultur Departamentua},
+  Address = {Donostia}
+}
+
+
+@phdthesis{uriarte1995,
+  Title = {Fruizko hizkera: azterketa linguistikoa},
+  Author = {Uriarte Garai, Jon Andoni},
+  Year = {1995},
+  School = {Deustuko Unibertsitatea}
+}
+
+
+@book{urkijo1994,
+  Title = {Zenbait apunte Laudioko euskaraz},
+  Author = {Urkijo, Natxo},
+  Year = {1994},
+  Publisher = {Udako Euskal Unibertsitatea},
+  Address = {Bilbo},
+  Url = {http://www.liburuklik.euskadi.eus/handle/10771/29193}
+}
+
+
+@book{zuazo2010,
+  Title = {Sakanako euskara. Burundako hizkera},
+  Author = {Zuazo, Koldo},
+  Year = {2010},
+  Publisher = {Euskaltzaindia},
+  Address = {Bilbo}
+}
+
+
+@book{zuazo2013,
+  Title = {Mailopeko euskara},
+  Author = {Zuazo, Koldo},
+  Year = {2013},
+  Publisher = {Euskal Herriko Unibertsitatea},
+  Address = {Bilbo}
+}
+
+
+@book{zuazo2018,
+  Title = {Sarako euskara},
+  Author = {K Zuazo},
+  Year = {2018},
+  Publisher = {Euskal Herriko Unibertsitatea},
+  Address = {Bilbo}
+}
+
+
+@book{zuazo2021,
+  Title = {Baigorri eta Ortzaize ibarretako euskara},
+  Author = {K Zuazo},
+  Year = {2021},
+  Publisher = {Euskal Herriko Unibertsitatea},
+  Address = {Bilbo}
+}
+
+
+@book{zubiri1998,
+  Title = {Goizueta eta Arano herrietako hizkeren ezaugarri orokorrak},
+  Author = {Zubiri, J J and Perurena, P},
+  Year = {1998},
+  Publisher = {Nafarroako Gobernua},
+  Address = {Iruñea}
 }
